Changement de couleur du header et menu de navigation. Retrait du parametre responsive sur les listes

--- a/app/Resources/views/affectation/index.html.twig
+++ b/app/Resources/views/affectation/index.html.twig
@@ -87,7 +87,7 @@
         "paging" : true,
         "info" : true, 
         "searching": true,
-        "responsive": true,
+        "responsive": false,
         "pageLength": 50,
         "order": [[0, 'asc']],
        language: {
