--- a/app/Resources/views/centre/ouverture.html.twig
+++ b/app/Resources/views/centre/ouverture.html.twig
@@ -115,7 +115,7 @@
         "paging" : true,
         "info" : true, 
         "searching": false,
-        "responsive": true,
+        "responsive": false,
         "pageLength": 100,
         "order": [[0, 'asc']],
        language: {
