--- a/app/Resources/views/genre/index.html.twig
+++ b/app/Resources/views/genre/index.html.twig
@@ -71,7 +71,7 @@
         "paging" : true,
         "info" : true, 
         "searching": true,
-        "responsive": true,
+        "responsive": false,
         "pageLength": 50,
         "order": [[2, 'desc']],
        language: {
