--- a/app/Resources/views/centre/index.html.twig
+++ b/app/Resources/views/centre/index.html.twig
@@ -59,7 +59,7 @@
         "paging" : true,
         "info" : true, 
         "searching": false,
-        "responsive": true,
+        "responsive": false,
         "pageLength": 1,
         "order": [[0, 'asc']],
        language: {
