--- a/app/Resources/views/formatimmatriculation/index.html.twig
+++ b/app/Resources/views/formatimmatriculation/index.html.twig
@@ -59,7 +59,7 @@
         "paging" : true,
         "info" : true, 
         "searching": true,
-        "responsive": true,
+        "responsive": false,
         "pageLength": 50,
         "order": [[1, 'asc']],
        language: {
