--- a/app/Resources/views/typecartegrise/index.html.twig
+++ b/app/Resources/views/typecartegrise/index.html.twig
@@ -55,7 +55,7 @@
             "paging" : true,
             "info" : true, 
             "searching": true,
-            "responsive": true,
+            "responsive": false,
             "pageLength": 50,
             "order": [[1, 'asc']],
        language: {
