--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -69,16 +69,22 @@
           <a class="nav-link {% block menu_gestion_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_index') }}">GESTION</a>
         </li>
         {% endif %}
-        {% if is_granted('ROLE_CHEF_CENTRE') %}
-        <li class="nav-item px-3">
-          <a class="nav-link {% block menu_parametres_actif %}{% endblock %}" href="{{ path('parametre_index') }}">PARAMETRES</a>
-        </li>
-        {% endif %}
         {% if is_granted('ROLE_SECRETAIRE') %}
         <li class="nav-item px-3">
           <a class="nav-link {% block menu_certificats_actif %}{% endblock %}" href="{{ path('secretaire_certificat_index') }}">CERTIFICATS</a>
         </li>
         {% endif %}
+        {% if is_granted('ROLE_CHEF_CENTRE') or is_granted('ROLE_CAISSIER_PRINCIPAL') %} 
+            <li class="nav-item px-3">
+                <a class="nav-link {% block menu_rapports_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_caisse_index') }}">RAPPORTS</a>
+            </li>
+        {% endif %}
+        {% if is_granted('ROLE_CHEF_CENTRE') %}
+        <li class="nav-item px-3">
+          <a class="nav-link {% block menu_parametres_actif %}{% endblock %}" href="{{ path('parametre_index') }}">PARAMETRES</a>
+        </li>
+        {% endif %}
+        
       </ul>
       <ul class="nav navbar-nav ml-auto">
 
