--- a/app/Resources/views/statistique/caisse/index.html.twig
+++ b/app/Resources/views/statistique/caisse/index.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 {% block menu -%}
-{% embed  '::centre/menu.html.twig' %}
+{% embed  '::statistique/menu.html.twig' %}
 {% block menu_parcaisse_actif %}active{% endblock %}
 {% block menu_parcaisse_open %}active{% endblock %}
 {% endembed %}
@@ -11,8 +11,8 @@
         <li class="breadcrumb-item">Etat journalier des caisses</li>
     </ol>
 {% endblock %}
-{% block menu_gestion_actif %}active{% endblock %}
 {% block pagetitle -%}ETAT JOURNALIER DES CAISSES{% endblock %}
+{% block menu_rapports_actif %}active{% endblock %}
 {% block actions %}
 {% endblock %}
 {% block body -%}
