--- a/app/Resources/views/statistique/detail/centre.html.twig
+++ b/app/Resources/views/statistique/detail/centre.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 {% block menu -%}
-{% embed  '::centre/menu.html.twig' %}
+{% embed  '::statistique/menu.html.twig' %}
 {% block menu_rapportcentre_actif %}active{% endblock %}
 {% block menu_statistiques_open %}active{% endblock %}
 {% endembed %}
@@ -12,7 +12,7 @@
     </ol>
 {% endblock %}
 {% block menu_gestion_actif %}active{% endblock %}
-{% block pagetitle -%}RAPPORT DU CENTRE{% endblock %}
+{% block menu_rapports_actif %}active{% endblock %}
 {% block actions %}
     <label class="btn btn-outline-secondary pointer-event"><a  href="#" id="doPrint" onclick="imprimer()">IMPRIMER</a></label>
     <label class="btn btn-warning pointer-event"> 
