Dans le menu "Gestion", regrouper "Véhicule" et "Quittance" sous le sous-menu "Historiques", et supprimer le sous-menu "Visite". Les droits doivent être ajustés pour que le chef de centre puisse voir à la fois les quittances et les véhicules (avant il n’avait pas accès à véhicule).

--- a/app/Resources/views/quittance/historique.html.twig
+++ b/app/Resources/views/quittance/historique.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 {% block menu -%}
 {% embed  '::centre/menu.html.twig' %}
-{% block menu_quittances_open %}active{% endblock %}
+{% block menu_historiques_open %}active{% endblock %}
 {% block menu_quittance_historique_actif %}active{% endblock %}
 {% endembed %}
 {% endblock %}
