Changer l'icône devant "Certificat" dans Gestion (Centres), actuellement des barres statistiques qui représente mieux des rapports.

--- a/app/Resources/views/centre/menu.html.twig
+++ b/app/Resources/views/centre/menu.html.twig
@@ -25,7 +25,7 @@
     </li>
     <li class="nav-item nav-dropdown {% block menu_certificats_open %}{% endblock %}">
         <a class="nav-link nav-dropdown-toggle" href="#">
-            <i class="nav-icon fa fa-bar-chart"></i> Certificats</a>
+            <i class="nav-icon fa fa-envelope"></i> Certificats</a>
             <ul class="nav-dropdown-items">
                 <li class="nav-item">
                     <a class="nav-link {% block menu_affectationcertificat_actif %}{% endblock %}" href="{{ path('centre_certificat') }}">
@@ -39,7 +39,7 @@
     </li>
     <li class="nav-item nav-dropdown {% block menu_historiques_open %}{% endblock %}">
         <a class="nav-link nav-dropdown-toggle" href="#">
-            <i class="nav-icon fa fa-bar-chart"></i> Historique</a>
+            <i class="nav-icon fa fa-history"></i> Historique</a>
             <ul class="nav-dropdown-items">
                 <li class="nav-item ">
                     <a class="nav-link {% block menu_historiquevehicule_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_historique_index') }}">
