afficher etat centre et mode maha au footer Changement du boutton mode maha Affichage de la version autoscan Allignement des formulaires

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -19,7 +19,7 @@
 
                     <!--begin::Title-->
                     <h1 class="d-none d-lg-block fw-bold text-white fs-2qx pb-5 pb-md-10">
-                        Bienvenue sur AUTOSCAN V.2
+                        Bienvenue sur AUTOSCAN V.2.0
                     </h1>
                     <!--end::Title-->
 
@@ -28,6 +28,7 @@
                         En cas de problème de connexion, veuillez contacter l'administrateur.
                     </p>
                     <!--end::Description-->
+                    <div align="center">Build 1234</div>
                 </div>
                 <!--end::Header-->
 
