--- a/app/Resources/views/centre/menu.html.twig
+++ b/app/Resources/views/centre/menu.html.twig
@@ -52,7 +52,7 @@
                 {% if is_granted('ROLE_SUPERVISEUR') %}
                 <li class="nav-item ">
                     <a class="nav-link {% block menu_quittance_historique_actif %}{% endblock %}" href="{{ path('admin_gestion_quittance_historique') }}">
-                        <i class="nav-icon icon-list"></i> Historique</a>
+                        <i class="nav-icon icon-list"></i>  Encaissement</a>
                 </li>
                 {% endif %}
                 
