Enrichissement sous-menu centre Affichage de la dernière visite dans controle et délivrance

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -12579,7 +12579,7 @@ canvas {
   flex-direction: column;
   padding: 0;
   color: #73818f;
-  background: #d85020;
+  background: #62c2e3;
 }
 
 .sidebar .sidebar-close {
